# gh-trending

./: README.md  install.sh  pyproject.toml  trending.py
.github/workflows/: daily-trending.yml
docs/: data.json  index.html
