[project]
name = "gh-trending"
version = "0.1.0"
description = "Find GitHub repos with the most momentum"
requires-python = ">=3.9"

[project.scripts]
gh-trending = "trending:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["trending.py"]
